#276: fixes script parameter